# =============================================================================
#  R E P S   ·   ast-lang
# =============================================================================
[package]
name    = "ast-lang"
version = "1.0.0"

# Minimum Supported Rust Version (MSRV)
rust-version = "1.85"
edition = "2024"

# License
license = "Apache-2.0 OR MIT"

# Readme
readme = "README.md"

# Description
description = "AST node traits with visitor/fold/transform machinery."

# Keywords (5 max)
keywords = ["compiler", "ast", "language", "visitor"]

# Categories
categories = ["development-tools", "parsing"]

# Links
homepage      = "https://github.com/jamesgober/ast-lang"
repository    = "https://github.com/jamesgober/ast-lang"
documentation = "https://docs.rs/ast-lang"

# Authors
authors = ["James Gober <me@jamesgober.com>"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "ast_lang"
path = "src/lib.rs"


# FEATURE FLAGS
# #################################
[features]
default = ["std"]
std = ["span-lang/std", "arena-lang/std"]


# DEPENDENCIES
# #################################
[dependencies]
# Source spans: every node reports the byte range of source it covers.
span-lang = { version = "0.4", default-features = false }
# Typed arena + stable `Id` handles: the storage a node tree is wired over.
arena-lang = { version = "1", default-features = false }


# DEV DEPENDENCIES
# #################################
[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest  = "1"

[target.'cfg(loom)'.dev-dependencies]
loom = "0.7"


# BENCHMARKS
# #################################
[[bench]]
name    = "bench"
harness = false


# RELEASE PROFILE
# #################################
[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "abort"
strip         = "symbols"
